--- a/LootLogger/Base.lproj/Main.storyboard
+++ b/LootLogger/Base.lproj/Main.storyboard
@@ -87,7 +87,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="VCG-mW-c4t">
-                                <rect key="frame" x="16" y="170" width="361" height="606"/>
+                                <rect key="frame" x="16" y="170" width="361" height="557"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="a1d-T2-lad">
                                         <rect key="frame" x="0.0" y="0.0" width="361" height="34"/>
@@ -147,7 +147,7 @@
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Date Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LVG-Ux-oy4">
-                                        <rect key="frame" x="0.0" y="126" width="361" height="480"/>
+                                        <rect key="frame" x="0.0" y="126" width="361" height="431"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -158,15 +158,28 @@
                                     <constraint firstItem="vh7-i6-twR" firstAttribute="leading" secondItem="lB1-I5-5Io" secondAttribute="leading" id="TCd-zF-mj7"/>
                                 </constraints>
                             </stackView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w1S-bF-xtf">
+                                <rect key="frame" x="0.0" y="735" width="393" height="49"/>
+                                <items>
+                                    <barButtonItem systemItem="camera" id="1Ho-nl-lOP">
+                                        <connections>
+                                            <action selector="choosePhotoSource:" destination="CSo-Pq-v1S" id="ptt-Mu-RRR"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="BgK-88-Mvg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="VCG-mW-c4t" firstAttribute="top" secondItem="BgK-88-Mvg" secondAttribute="top" constant="8" id="8xY-sT-RbR"/>
+                            <constraint firstItem="w1S-bF-xtf" firstAttribute="leading" secondItem="ZWS-if-Pji" secondAttribute="leading" id="DaJ-6x-zW6"/>
+                            <constraint firstItem="w1S-bF-xtf" firstAttribute="top" secondItem="VCG-mW-c4t" secondAttribute="bottom" constant="8" id="HIK-BQ-dQR"/>
+                            <constraint firstAttribute="trailing" secondItem="w1S-bF-xtf" secondAttribute="trailing" id="THJ-1k-ram"/>
                             <constraint firstItem="BgK-88-Mvg" firstAttribute="trailing" secondItem="VCG-mW-c4t" secondAttribute="trailing" constant="16" id="ZNF-vG-dDa"/>
+                            <constraint firstItem="w1S-bF-xtf" firstAttribute="bottom" secondItem="BgK-88-Mvg" secondAttribute="bottom" id="bj9-Xq-bBP"/>
                             <constraint firstItem="VCG-mW-c4t" firstAttribute="leading" secondItem="BgK-88-Mvg" secondAttribute="leading" constant="16" id="g4h-Bw-F7f"/>
-                            <constraint firstItem="BgK-88-Mvg" firstAttribute="bottom" secondItem="VCG-mW-c4t" secondAttribute="bottom" constant="8" id="rgi-ZD-Cb1"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="dwd-zA-Cu7" appends="YES" id="3if-cH-6Yo"/>
@@ -210,7 +223,7 @@
     </scenes>
     <resources>
         <systemColor name="secondaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
